save tabs feature added (tab, window and all)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "humanize-duration": "^3.32.1",
     "lucide-react": "^0.447.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +39,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@thedutchcoder/postcss-rem-to-px": "^0.0.2",
     "@types/chrome": "^0.0.268",
+    "@types/humanize-duration": "^3.27.4",
     "@types/node": "^20.12.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
