--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "101tabs",
   "displayName": "101tabs",
-  "description": "An extension to solve the 101 tabs problem.",
+  "description": "A Chrome extension designed to help you manage and organize your browser tabs efficiently, preventing tab overload and enhancing productivity.",
   "private": true,
   "version": "0.1.1",
   "type": "module",
