--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.8",
     "humanize-duration": "^3.32.1",
     "lucide-react": "^0.447.0",
     "puppeteer": "^23.5.1",
